shannon visualization method done for any n_grams

--- a/src/shannon_visualization.ipynb
+++ b/src/shannon_visualization.ipynb
@@ -2,29 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import os\n",
     "import numpy as np\n",
-    "from collections import Counter\n",
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 289,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regex = \"[a-zA-ZçÇãÃõÕáÁéÉíÍóÓúÚâÂêÊîÎôÔûÛàÀ]+\"\n",
-    "\n",
-    "corpus = open(\"..\\data\\grande_sertao_veredas.txt\", encoding='UTF-8').read()\n",
-    "\n",
-    "tokens = re.findall(regex, corpus)\n",
-    "\n",
-    "tokens_count = Counter(tokens)"
+    "from collections import Counter"
    ]
   },
   {
@@ -40,89 +25,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "def p_trigram(w1, w2, w3, tokens):\n",
-    "    count_w1_w2 = 0\n",
+    "class ShannonVisualizationMethod:\n",
+    "    def __init__(self, corpus_txt_path_list):\n",
+    "        self.tokens = self._aggregate_corpus(corpus_txt_path_list)\n",
     "    \n",
-    "    for i in range(len(tokens) - 1):\n",
-    "        if(tokens[i] == w1 and tokens[i+1] == w2):\n",
-    "            count_w1_w2 += 1    \n",
-    "\n",
-    "    count_w1_w2_w3 = 0\n",
-    "\n",
-    "    for i in range(len(tokens) - 2):\n",
-    "        if(tokens[i] == w1 and tokens[i+1] == w2 and tokens[i+2] == w3):\n",
-    "            count_w1_w2_w3 += 1\n",
+    "    def _generate_tokens(self, corpus_txt_path):\n",
+    "        regex = \"[a-zA-ZçÇãÃõÕáÁéÉíÍóÓúÚâÂêÊîÎôÔûÛàÀ]+\"\n",
+    "        corpus = open(corpus_txt_path, encoding='UTF-8').read()\n",
+    "        tokens = re.findall(regex, corpus)\n",
+    "        return tokens\n",
     "    \n",
-    "    return (count_w1_w2_w3 / count_w1_w2) if (count_w1_w2 > 0) else 0\n",
-    "\"\"\"\n",
-    "def choose_next_word(second_last_word, last_word, tokens):\n",
-    "    count_w1_w2 = Counter(zip(tokens, tokens[1:]))[(second_last_word, last_word)]\n",
+    "    def _aggregate_corpus(self, corpus_txt_path_list):\n",
+    "        tokens = []\n",
+    "        for corpus_txt_path in corpus_txt_path_list:\n",
+    "            tokens += self._generate_tokens(corpus_txt_path)\n",
+    "        return tokens\n",
     "    \n",
-    "    if(count_w1_w2 == 0):\n",
-    "        raise Exception(\"The bigram does not exist in the corpus\")\n",
-    "    \n",
-    "    trigrams = Counter(zip(tokens, tokens[1:], tokens[2:]))\n",
-    "    \n",
-    "    count_w1_w2_w3s = []\n",
-    "    \n",
-    "    for token in tokens:\n",
-    "        count_w1_w2_w3s.append(trigrams[(second_last_word, last_word, token)])\n",
+    "    def _choose_next_word(self, start_sentence_list):\n",
+    "        n = len(start_sentence_list) + 1\n",
+    "        \n",
+    "        # Denominator cal \n",
+    "        count_denom = Counter(zip(*(self.tokens[i:] for i in range(n - 1))))[tuple(start_sentence_list)]\n",
     "\n",
-    "    trigram_probabilities = np.array(count_w1_w2_w3s) / count_w1_w2\n",
+    "        if count_denom == 0:\n",
+    "            raise Exception(\"The start sentence list does not exist in the corpus\")\n",
     "\n",
-    "    set_words = []\n",
-    "    for i in range(len(trigram_probabilities)):\n",
-    "        # only non zero probabilities\n",
-    "        if(trigram_probabilities[i] > 0):\n",
-    "            set_words.append((trigram_probabilities[i], tokens[i]))\n",
+    "        n_grams = Counter(zip(*(self.tokens[i:] for i in range(n))))\n",
     "\n",
-    "    # make a set of words\n",
-    "    set_words = set(set_words)\n",
+    "        count_n_grams = [n_grams[tuple(start_sentence_list + [token])] for token in self.tokens]\n",
     "\n",
-    "    prob_words = [st[0] for st in set_words]\n",
-    "    candidate_words = [st[1] for st in set_words]\n",
-    "    \n",
-    "    next_word = np.random.choice(candidate_words, 1, p=prob_words).item()\n",
+    "        n_gram_probabilities = np.array(count_n_grams) / count_denom\n",
     "\n",
-    "    return next_word\n",
+    "        # Remove zero probabilities\n",
+    "        set_words = [(n_gram_probabilities[i], self.tokens[i]) for i in range(len(n_gram_probabilities)) if\n",
+    "                        n_gram_probabilities[i] > 0]\n",
     "\n",
-    "def generate_text(first_word, second_word, tokens, words_count = 10):\n",
+    "        # Make a set of words\n",
+    "        set_words = set(set_words)\n",
     "\n",
-    "    generated_text_str = f\"{first_word} {second_word}\"\n",
+    "        # Choose next word\n",
+    "        prob_words = [st[0] for st in set_words]\n",
+    "        candidate_words = [st[1] for st in set_words]\n",
     "\n",
-    "    for _ in range(0,words_count):\n",
-    "        generated_word = choose_next_word(first_word, second_word, tokens)\n",
-    "        first_word = second_word\n",
-    "        second_word = generated_word\n",
+    "        next_word = np.random.choice(candidate_words, 1, p=prob_words).item()\n",
     "\n",
-    "        generated_text_str = generated_text_str + \" \" + generated_word\n",
+    "        return next_word\n",
     "\n",
-    "    return generated_text_str\n"
+    "    def generate_text(self, start_sentence_list, words_count=10):\n",
+    "        generated_text_str = ' '.join(start_sentence_list)\n",
+    "        \n",
+    "        for _ in range(words_count):\n",
+    "            generated_word = self._choose_next_word(start_sentence_list)\n",
+    "            start_sentence_list.pop(0)  # removes first word\n",
+    "            start_sentence_list.append(generated_word)\n",
+    "\n",
+    "            generated_text_str = generated_text_str + \" \" + generated_word\n",
+    "\n",
+    "        return generated_text_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = '../movie_scripts'\n",
+    "corpus_txt_path_list = [os.path.join('../movie_scripts', file_path) for file_path in os.listdir(dataset_path)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shannon_visu = ShannonVisualizationMethod(corpus_txt_path_list[0:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hoje sei não estava pessoa nenhuma nem guarda mas o Hermógenes Mas perto duns cem Respirei a gente tinha baralhos se jogou rouba monte e escopa porque truque eu não tinha as orelhas do teu jumento Mas amuado eu João Guimarães Rosa Grande Sertão Veredas do Arrenegado a célebre aparição eu não'"
+       "'I am not a dog EMIL For five years I paid for the movie When he took me home he said we should go on a Goddamn trim hunt stop moaning HAMMOND Speakin of moans my Stomach is startin to growl CATES We eat when I say that Cameron s love is pure Purer than say Joey Dorsey s PATRICK Dorsey can plow whoever he wants I m just a single dad out here blowing like dust in the wind Ed shakes Julie s hand and gives hima soda TONY is puzzled DISSOLVE Tony is siting in a chair with violin in hand'"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_text(\"hoje\", \"sei\", tokens, words_count = 50)"
+    "shannon_visu.generate_text(\n",
+    "    [\"I\", \"am\", \"not\"],\n",
+    "    words_count=100\n",
+    ")"
    ]
   }
  ],
